k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-ingress
  namespace: smart
  annotations:
    ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: smart-backend-service
                port:
                  number: 8000
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: smart-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-frontend-service
                port:
                  number: 80
